[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PVL14"
version = "0.1.0"
description = "PVL14 framework: lightweight masked discrete diffusion in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Shakhnazar" }]
dependencies = [
    "torch>=2.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pvl14*"]
